crates/cli/tests/snapshots/composer__composer_install_checks_jobs_lock_before_reading_php_selector.snap
---
source: crates/cli/tests/composer.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: PV self-update/daemon mutation coordination is active; the OS lock is held on <tempdir>/home/.pv/run/jobs.lock\n",
}
