crates/cli/tests/snapshots/composer__composer_install_on_a_terminal_reports_the_php_pair.snap
---
source: crates/cli/tests/composer.rs
expression: output.stdout
---
✓  PHP 8.4 installed · includes FrankenPHP
✓  Installed Composer track 2
   ·  2.8.1-pv1
