crates/cli/tests/snapshots/composer__composer_install_uses_cached_manifest_default_php_track.snap
---
source: crates/cli/tests/composer.rs
expression: "(output, resource_record_snapshots(&records, tempdir.path())?,\nenvironment.text_request_count(), environment.byte_request_count(),)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Installed PHP track 8.4\nInstalled FrankenPHP track 8.4\nInstalled Composer track 2\n",
        stderr: "",
    },
    [
        ResourceRecordSnapshot {
            resource_name: "composer",
            track: "2",
            desired_state: "Installed",
            installed_version: Some(
                "2.8.1-pv1",
            ),
            current_artifact_path: Some(
                "home/.pv/resources/composer/2/releases/2.8.1-pv1",
            ),
            usage_count: 0,
            removal_prune: false,
            removal_force: false,
        },
        ResourceRecordSnapshot {
            resource_name: "frankenphp",
            track: "8.4",
            desired_state: "Installed",
            installed_version: Some(
                "8.4.8-pv1",
            ),
            current_artifact_path: Some(
                "home/.pv/resources/frankenphp/8.4/releases/8.4.8-pv1",
            ),
            usage_count: 0,
            removal_prune: false,
            removal_force: false,
        },
        ResourceRecordSnapshot {
            resource_name: "php",
            track: "8.4",
            desired_state: "Installed",
            installed_version: Some(
                "8.4.8-pv1",
            ),
            current_artifact_path: Some(
                "home/.pv/resources/php/8.4/releases/8.4.8-pv1",
            ),
            usage_count: 0,
            removal_prune: false,
            removal_force: false,
        },
    ],
    2,
    0,
)
