crates/cli/tests/snapshots/composer__composer_shim_does_not_create_state_during_exclusive_shutdown.snap
---
source: crates/cli/tests/composer.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: PV self-update/daemon mutation coordination is active; the OS lock is held on <tempdir>/home/.pv-runtime-lifecycle.lock\n",
}
