crates/cli/tests/snapshots/composer__composer_shim_fails_clearly_when_composer_is_missing.snap
---
source: crates/cli/tests/composer.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: Composer track 2 is not installed.\n  Run `pv composer:install` to install it.\n",
}
